--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "https://shyaam-works.github.io/attendance",
+  "homepage": "https://shyaam-works.github.io/attendance",
+  "name": "att",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
